<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<EditTextPreference 
	    android:key="baseUrl"
		android:title="@string/prefs_base_url"
		android:singleLine="true" 
		android:defaultValue="@string/DEFAULT_BASE_URL"
		android:inputType="textUri"/>
	<EditTextPreference 
	    android:key="wifiName"
	    android:title="@string/prefs_wifi_name"
	    android:singleLine="true"
	    android:defaultValue=""/>
	<CheckBoxPreference
	    android:key="refreshLists"
	    android:title="@string/prefs_refresh"
	    android:defaultValue="false"
	    android:summaryOff="@string/prefs_refresh_off"
	    android:summaryOn="@string/prefs_refresh_on"
	    android:disableDependentsState="false"/>
<!--     <ListPreference
        android:key="refreshFrequency"
        android:title="@string/prefs_refresh_frequency"
        android:entries="@array/refreshFrequencyDescriptions"
        android:entryValues="@array/refreshFrequencyValues"
        android:dependency="refreshLists"/>
 --></PreferenceScreen>
